# bccovideda

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
data/sample/: case_data_sample.csv  case_data_sample_id.csv  case_data_sample_noID.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bccovideda/: __init__.py  bccovideda.py  get_data.py  plot_hist_by_cond.py  plot_line_by_date.py  show_summary_stat.py
tests/: test_bccovideda.py  test_get_data.py  test_plot_hist_by_cond.py  test_plot_line_by_date.py  test_show_summary_stat.py
