[tool.poetry]
name = "bccovideda"
version = "0.1.0"
description = "A package to download BC covid data and create simple EDA"
authors = ["MDS 2021 DSCI 524 Group 25"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.3.5"
altair = "^4.2.0"
altair-saver = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
